@startuml
skinparam monochrome false

package "stakeholder.domain.model" {
  class Parent {
    - id: string
    - fullName: string
    - email: string
    - phoneNumber: string
    - organizationId: string
    - children: Child[]
  }
  class Driver {
    - id: string
    - fullName: string
    - email: string
    - phoneNumber: string
    - licenseNumber: string
    - organizationId: string
  }
  class Child {
    - id: string
    - fullName: string
    - age: number
    - enrollmentState: string
    - parentId: string
  }
  class StudentGroup {
    - id: string
    - name: string
    - organizationId: string
    - childIds: string[]
    - isFinalized: boolean
  }
}

package "stakeholder.application" {
  class StakeholderStore {
    - parents
    - drivers
    - children
    - groups
    + loadParents(organizationId): void
    + loadDrivers(organizationId): void
    + loadChildren(parentId): void
    + loadGroups(organizationId): void
    + createParent(request): void
    + createDriver(request): void
    + createChild(request): void
    + createGroup(request): void
    + finalizeGroup(groupId): void
  }
}

package "stakeholder.infrastructure" {
  class StakeholderApi {
    + createParent(request)
    + getParentsByOrganization(organizationId)
    + createDriver(request)
    + getDriversByOrganization(organizationId)
    + createChild(request)
    + getChildrenByParent(parentId)
    + createStudentGroup(request)
    + getGroupsByOrganization(organizationId)
    + finalizeGroup(groupId)
  }
  class ParentAssembler {
    + toEntityFromResource(resource)
    + toEntitiesFromResponse(response)
  }
  class DriverAssembler {
    + toEntityFromResource(resource)
    + toEntitiesFromResponse(response)
  }
  class ChildAssembler {
    + toEntityFromResource(resource)
    + toEntitiesFromResponse(response)
  }
  class StudentGroupAssembler {
    + toEntityFromResource(resource)
    + toEntitiesFromResponse(response)
  }
}

package "stakeholder.presentation.views" {
  class StakeholderManagementView <<view>> {
    - section: string
    - parents / drivers / children
    - parentDrawer / driverDrawer
    + loadParents(): void
    + loadChildren(): void
    + getChildrenByParent(parentId): Child[]
    + persistDriverVehicleAssignment(driverId, vehicleId): void
  }
  class StudentGroupManagementView <<view>> {
    - groups: StudentGroup[]
    - children: Child[]
    - form
    + loadData(): void
    + createGroup(): void
    + addChild(group): void
    + removeChild(group, childId): void
    + finalizeGroup(group): void
  }
  class ProfileManagementView <<view>> {
    - activeTab: string
    - showDialog: boolean
    + loadProfiles(): void
    + openCreate(): void
    + openEdit(profile): void
    + saveProfile(): void
    + deleteProfile(id): void
  }
  class ProfileListView <<view>> {
    - profiles: Profile[]
    + confirmDelete(profile): void
  }
  class ProfileFormView <<view>> {
    - form
    + saveProfile(): void
  }
}

' ─── Referencias a otros paquetes ────────────────────────────────────────────
package "shared.presentation.components" {
  class Layout {
  }
}

Parent --> Child
StakeholderStore ..> "stakeholder.domain.model.Parent" : uses
StakeholderStore ..> "stakeholder.domain.model.Driver" : uses
StakeholderStore ..> "stakeholder.domain.model.Child" : uses
StakeholderStore ..> "stakeholder.domain.model.StudentGroup" : uses
StakeholderStore ..> "stakeholder.infrastructure.StakeholderApi" : uses
StakeholderStore ..> "stakeholder.infrastructure.ParentAssembler" : uses
StakeholderStore ..> "stakeholder.infrastructure.DriverAssembler" : uses
StakeholderStore ..> "stakeholder.infrastructure.ChildAssembler" : uses
StakeholderStore ..> "stakeholder.infrastructure.StudentGroupAssembler" : uses
ParentAssembler ..> "stakeholder.domain.model.Parent" : creates
DriverAssembler ..> "stakeholder.domain.model.Driver" : creates
ChildAssembler ..> "stakeholder.domain.model.Child" : creates
StudentGroupAssembler ..> "stakeholder.domain.model.StudentGroup" : creates
StakeholderManagementView --> "stakeholder.domain.model.Parent" : uses
StakeholderManagementView --> "stakeholder.domain.model.Driver" : uses
StakeholderManagementView --> "stakeholder.domain.model.Child" : uses
StudentGroupManagementView --> "stakeholder.domain.model.StudentGroup" : uses
StudentGroupManagementView --> "stakeholder.domain.model.Child" : uses
Layout --> StakeholderManagementView : routes to
Layout --> StudentGroupManagementView : routes to
Layout --> ProfileManagementView : routes to
Layout --> ProfileListView : routes to
Layout --> ProfileFormView : routes to
StakeholderManagementView --> StakeholderStore : uses
StudentGroupManagementView --> StakeholderStore : uses
ProfileManagementView --> StakeholderStore : uses

@enduml
